5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1674_1880.log
== TEST (2019-04-30 12:05:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = 1%3
print(a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:06:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = 4%7
print(a)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:06:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = 10%7
print(a)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:41:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valor de m: "))

if (1<= m <=12):
	if (m==1):
			x = "domingo"
		elif (m==2):
			x = "segunda"
		elif (m==3):
			x = "terca"
		elif (m==4):
			x = "quarta"
		elif (m==5):
			x = "quinta"
		elif (m==6):
			x = "sexta"


		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
-- EXECUTION TIME:
0.168425
-- ERROR:
  File "/home/codebench/codes/1674/1880/main.py", line 7
    elif (m==2):
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:46:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valor de m: "))

if (1<= m <=12):
	if (m==1):
		x = "janeiro"
	elif (m==2):
		x = "fevereiro"
	elif (m==3):
		x = "março"
	elif (m==4):
		x = "abril"
	elif (m==5):
		x = "maio"
	elif (m==6):
		x = "junho"
	elif (m==7):
		x = "julho"
	elif (m==8):
		x = "agosto"
	elif (m==9):
		x = "setembro"
	elif (m==10):
		x = "outubro"
	elif (m==12):
		x = "novembro"
	elif (m==12):
		x = "dezembro"
	print(x)
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:46:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valor de m: "))

if (1<= m <=12):
	if (m==1):
		x = "janeiro"
	elif (m==2):
		x = "fevereiro"
	elif (m==3):
		x = "março"
	elif (m==4):
		x = "abril"
	elif (m==5):
		x = "maio"
	elif (m==6):
		x = "junho"
	elif (m==7):
		x = "julho"
	elif (m==8):
		x = "agosto"
	elif (m==9):
		x = "setembro"
	elif (m==10):
		x = "outubro"
	elif (m==12):
		x = "novembro"
	elif (m==12):
		x = "dezembro"
	print(x)
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:46:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valor de m: "))

if (1<= m <=12):
	if (m==1):
		x = "janeiro"
	elif (m==2):
		x = "fevereiro"
	elif (m==3):
		x = "março"
	elif (m==4):
		x = "abril"
	elif (m==5):
		x = "maio"
	elif (m==6):
		x = "junho"
	elif (m==7):
		x = "julho"
	elif (m==8):
		x = "agosto"
	elif (m==9):
		x = "setembro"
	elif (m==10):
		x = "outubro"
	elif (m==12):
		x = "novembro"
	elif (m==12):
		x = "dezembro"
	print(x)
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:46:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valor de m: "))

if (1<= m <=12):
	if (m==1):
		x = "janeiro"
	elif (m==2):
		x = "fevereiro"
	elif (m==3):
		x = "março"
	elif (m==4):
		x = "abril"
	elif (m==5):
		x = "maio"
	elif (m==6):
		x = "junho"
	elif (m==7):
		x = "julho"
	elif (m==8):
		x = "agosto"
	elif (m==9):
		x = "setembro"
	elif (m==10):
		x = "outubro"
	elif (m==12):
		x = "novembro"
	elif (m==12):
		x = "dezembro"
	print(x)
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:46:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("valor de m: "))

if (1<= m <=12):
	if (m==1):
		x = "janeiro"
	elif (m==2):
		x = "fevereiro"
	elif (m==3):
		x = "março"
	elif (m==4):
		x = "abril"
	elif (m==5):
		x = "maio"
	elif (m==6):
		x = "junho"
	elif (m==7):
		x = "julho"
	elif (m==8):
		x = "agosto"
	elif (m==9):
		x = "setembro"
	elif (m==10):
		x = "outubro"
	elif (m==12):
		x = "novembro"
	elif (m==12):
		x = "dezembro"
	print(x)
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.120648
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
